# peanuts-bot

./: .tool-versions  CLAUDE.md  LICENSE  Makefile  README.md  app.py  build_deploy.sh  config.py  pyproject.toml  requirements.txt
.claude/: MIGRATION.md  STYLE_GUIDE.md  TODO.md  deployment.md  extensions.md  libraries_discord.md  libraries_image.md  libraries_stocks_api.md  libraries_utils.md  settings.json  user_stories.md
.github/workflows/: deploy.yml  poll_deploy.py
.legacy_render_bootstrap/: scripts.sh
.legacy_render_bootstrap/github_workflows/: deploy.yml  poll_deploy.py
peanuts_bot/: __init__.py  config.py  errors.py  health_probe.py
peanuts_bot/constants/: bot.py  messages.py
peanuts_bot/extensions/: __base__.py  __init__.py  channels.py  emojis.py  help.py  local.py  messages.py  minecraft.py  rng.py  roles.py  stocks.py  users.py
peanuts_bot/extensions/internals/: __init__.py  protocols.py
peanuts_bot/libraries/: discord_bot.py  env.py  image.py  itertools_ext.py  stocks_api.py  storage.py  tabletop_roller.py  type_checking.py  types_ext.py  voice.py
peanuts_bot/libraries/discord/: admin.py  api.py  messaging.py  voice.py
peanuts_bot/libraries/stocks_api/: __init__.py  errors.py  interface.py
peanuts_bot/libraries/stocks_api/providers/: __init__.py  alphav.py  alphav_legacy.py
peanuts_bot/middleware/: error_handling.py
pi_bootstrap/: peanutsbot.service  remote-deploy.sh  start-bot.sh
