[tool.poetry]
name = "peanuts-bot"
version = "2.0.0"
description = ""
authors = ["Shajesh Jegatheeswaran"]
license = "MIT"
readme = "README.md"
packages = [{include = "peanuts_bot"}]

[tool.poetry.dependencies]
python = "3.10.5"
discord-py-interactions = "5.6.0"
aiohttp = "3.8.4"
async-lru = "2.0.2"
matplotlib = "3.7.1"
python-dotenv = "0.20.0"
python-dateutil = "2.8.2"


[tool.poetry.group.dev.dependencies]
black = "22.6.0"
mypy = "1.4.0"
types-python-dateutil = "2.8.19.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
