[tool.poetry]
name = "peanuts-bot"
version = "2.0.0"
description = ""
authors = ["Shajesh Jegatheeswaran"]
license = "MIT"
readme = "README.md"
packages = [{ include = "peanuts_bot" }]

[tool.poetry.dependencies]
python = "3.10.5"
discord-py-interactions = { version = "5.15.0", extras = ["voice"] }
aiohttp = "3.11.6"
async-lru = "2.0.2"
matplotlib = "3.10.6"
python-dotenv = "0.20.0"
python-dateutil = "2.8.2"
fastapi = "^0.110.0"
uvicorn = { version = "^0.29.0", extras = ["standard"] }
mcstatus = "11.1.1"
typedenv-py = "^1.0.0"
gtts = "^2.5.4"


[tool.poetry.group.dev.dependencies]
black = "22.6.0"
mypy = "1.4.0"
types-python-dateutil = "2.8.19.13"

[tool.mypy]
check_untyped_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
