[tool.poetry]
name = "peanuts-bot"
version = "2.0.0"
description = ""
authors = ["Shajesh Jegatheeswaran"]
license = "MIT"
readme = "README.md"
packages = [{ include = "peanuts_bot" }]

[tool.poetry.dependencies]
python = "3.10.5"
"discord.py" = {version = "2.7.1", extras = ["voice"]}
aiohttp = "3.11.6"
async-lru = "2.0.2"
matplotlib = "3.10.6"
python-dotenv = "0.20.0"
python-dateutil = "2.8.2"
fastapi = "0.110.3"
uvicorn = { version = "0.29.0", extras = ["standard"] }
mcstatus = "11.1.1"
typedenv-py = "1.0.1"
gtts = "2.5.4"


[tool.poetry.group.dev.dependencies]
ruff = "0.15.11"
mypy = "1.15.0"
types-python-dateutil = "2.8.19.13"

[tool.mypy]
check_untyped_defs = true

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "double"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
